docs: Update to use Standard_NC24ads_A100_v4 as default SKU in docs

--- a/docs/custom-model-integration/custom-deployment-template.yaml
+++ b/docs/custom-model-integration/custom-deployment-template.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-custom-llm
 resource:
-  instanceType: "Standard_NC12s_v3" # Replace with the required VM SKU based on model requirements
+  instanceType: "Standard_NC24ads_A100_v4" # Replace with the required VM SKU based on model requirements
   labelSelector:
     matchLabels:
       apps: custom-llm
