--- a/docs/custom-model-integration/reference-image-deployment.yaml
+++ b/docs/custom-model-integration/reference-image-deployment.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-custom-llm
 resource:
-  instanceType: "Standard_NC12s_v3" # Replace with the required VM SKU based on model requirements
+  instanceType: "Standard_NC24ads_A100_v4" # Replace with the required VM SKU based on model requirements
   labelSelector:
     matchLabels:
       apps: custom-llm
