--- a/examples/inference/kaito_workspace_falcon_7b.yaml
+++ b/examples/inference/kaito_workspace_falcon_7b.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-falcon-7b
 resource:
-  instanceType: "Standard_NC12s_v3"
+  instanceType: "Standard_NC24ads_A100_v4"
   labelSelector:
     matchLabels:
       apps: falcon-7b
