--- a/examples/inference/kaito_workspace_llama2_7b-chat.yaml
+++ b/examples/inference/kaito_workspace_llama2_7b-chat.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-llama-2-7b-chat
 resource:
-  instanceType: "Standard_NC12s_v3"
+  instanceType: "Standard_NC24ads_A100_v4"
   labelSelector:
     matchLabels:
       apps: llama-2-7b-chat
