--- a/docs/custom-model-integration/reference-image-deployment.yaml
+++ b/docs/custom-model-integration/reference-image-deployment.yaml
@@ -23,6 +23,8 @@ inference:
           - "--gpu_ids"
           - "all"
           - "inference_api.py"
+          - "--pipeline"
+          - "text-generation"
           - "--trust_remote_code"
           - "--allow_remote_files"
           - "--pretrained_model_name_or_path"
