--- a/.github/e2e-preset-configs.json
+++ b/.github/e2e-preset-configs.json
@@ -34,7 +34,7 @@
             "gpu_count": 1
           },
           "vllm": {
-            "command": "python3 /workspace/vllm/inference_api.py --dtype bfloat16 --chat-template /workspace/chat_templates/falcon-instruct.jinja --tensor-parallel-size 2",
+            "command": "python3 /workspace/vllm/inference_api.py --dtype float16 --chat-template /workspace/chat_templates/falcon-instruct.jinja --tensor-parallel-size 2",
             "gpu_count": 2
           }
         }
