--- a/presets/workspace/test/manifests/llama-2-13b-chat/llama-2-13b-chat.yaml
+++ b/presets/workspace/test/manifests/llama-2-13b-chat/llama-2-13b-chat.yaml
@@ -69,7 +69,7 @@ spec:
           key: nvidia.com/gpu
           operator: Exists
       nodeSelector:
-        pool: llama213bchat
+        pool: llama213bcha
 ---
 apiVersion: v1
 kind: Service
