--- a/.github/workflows/publish-rag-controller-gh-image.yml
+++ b/.github/workflows/publish-rag-controller-gh-image.yml
@@ -114,3 +114,13 @@ jobs:
         env:
           TRIVY_USERNAME: ${{ github.actor }}
           TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+
+  run-e2e-gh-image:
+    needs: [ check-tag, build-scan-publish-gh-images ]
+    uses: ./.github/workflows/ragengine-e2e-workflow.yml
+    with:
+      git_sha: ${{ github.sha }}
+      isRelease: true
+      registry: ${{ needs.build-scan-publish-gh-images.outputs.registry_repository }}
+      k8s_version: ${{ vars.AKS_K8S_VERSION }}
+      tag: ${{ needs.check-tag.outputs.tag }}
