feat: fix workflow

--- a/.github/workflows/e2e-workflow.yml
+++ b/.github/workflows/e2e-workflow.yml
@@ -98,7 +98,8 @@ jobs:
       
       - name: Install testing commands
         run: |
-          kubectl get pods -n kaito-workspace -o name | grep "^pod/kaito-workspace" | sed 's/^pod\///' | xargs -I {} kubectl exec -n kaito-workspace {} -- sh -c "apt-get update && apt-get install -y curl"
+          kubectl get pods -n kaito-workspace -o name | grep "^pod/kaito-workspace" | sed 's/^pod\///' | xargs -I {} kubectl exec -n kaito-workspace {} -- apt-get update
+          kubectl get pods -n kaito-workspace -o name | grep "^pod/kaito-workspace" | sed 's/^pod\///' | xargs -I {} kubectl exec -n kaito-workspace {} -- apt-get install -y curl
 
       - name: Run e2e test
         run: |
