--- a/.github/workflows/ragengine-e2e-workflow.yml
+++ b/.github/workflows/ragengine-e2e-workflow.yml
@@ -26,36 +26,43 @@ on:
         default: "1.30.0"
 
 jobs:
-  base-setup:
-    uses: ./.github/workflows/e2e-base-setup.yaml
-    with:
-      git_sha: ${{ inputs.git_sha }}
-      node_provisioner: ${{ inputs.node_provisioner }}
-      tag: ${{ inputs.tag }}
-      isRelease: ${{ inputs.isRelease }}
-      registry: ${{ inputs.registry }}
-      region: ${{ inputs.region }}
-      k8s_version: ${{ inputs.k8s_version }}
-
   e2e-tests:
     runs-on: [ "self-hosted", "hostname:kaito-e2e-github-runner" ]
-    name: e2e-tests-${{ inputs.node_provisioner }}
-    needs: base-setup
+    environment: e2e-test
     permissions:
       contents: read
-      id-token: write # This is required for requesting the JWT
+      id-token: write
     
     env:
-      AZURE_CLUSTER_NAME: ${{ needs.base-setup.outputs.cluster_name }}
-      AZURE_RESOURCE_GROUP: ${{ needs.base-setup.outputs.cluster_name }}
-      TEST_SUITE: ${{ inputs.node_provisioner }}
-      E2E_ACR_REGISTRY: ${{ needs.base-setup.outputs.cluster_name }}.azurecr.io
-      E2E_ACR_REGISTRY_SECRET: ${{ needs.base-setup.outputs.cluster_name }}-acr-secret
+      TEST_SUITE: ${{ inputs.node_provisioner }}      
       GO_VERSION: "1.23"
       KARPENTER_NAMESPACE: "karpenter"
       GPU_PROVISIONER_NAMESPACE: "gpu-provisioner"
 
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
+          disable-sudo: true
+          disable-telemetry: true
+
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.git_sha }}
+      
+      - name: Run e2e-base-setup composite action
+        id: base-setup
+        uses: ./.github/actions/e2e-base-setup
+        with:
+          git_sha: ${{ inputs.git_sha }}
+          node_provisioner: ${{ inputs.node_provisioner }}
+          tag: ${{ inputs.tag }}
+          isRelease: ${{ inputs.isRelease }}
+          region: ${{ inputs.region }}
+          k8s_version: ${{ inputs.k8s_version }}
+
       - name: Set Registry
         if: ${{ inputs.isRelease }}
         run: |
@@ -68,7 +75,7 @@ jobs:
         run: |
           make docker-build-ragengine
         env:
-          REGISTRY: ${{ env.E2E_ACR_REGISTRY }}
+          REGISTRY: ${{ env.CLUSTER_NAME }}.azurecr.io
       
       - name: Remove existing Go modules directory
         run: sudo rm -rf ~/go/pkg/mod
@@ -76,7 +83,7 @@ jobs:
       - name: Set up Go ${{ env.GO_VERSION }}
         uses: actions/setup-go@v5.2.0
         with:
-          go-version: ${{ env.GO_VERSION  }}
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Install Helm
         uses: azure/setup-helm@v4
@@ -87,18 +94,26 @@ jobs:
           make az-patch-install-ragengine-helm
           kubectl wait --for=condition=available deploy "kaito-ragengine" -n kaito-ragengine --timeout=300s
         env:
-          REGISTRY: ${{ env.E2E_ACR_REGISTRY }}
+          REGISTRY: ${{ env.CLUSTER_NAME }}.azurecr.io
+          AZURE_RESOURCE_GROUP: ${{ env.CLUSTER_NAME }}
+          AZURE_CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
       
       - name: Run e2e test
         run: |
           AI_MODELS_REGISTRY=$E2E_ACR_AMRT_USERNAME.azurecr.io \
           AI_MODELS_REGISTRY_SECRET=$E2E_AMRT_SECRET_NAME \
           make kaito-ragengine-e2e-test
+        env:
+          AZURE_CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
+          E2E_ACR_REGISTRY: ${{ env.CLUSTER_NAME }}.azurecr.io
+          E2E_ACR_REGISTRY_SECRET: ${{ env.CLUSTER_NAME }}-acr-secret
 
       - name: Cleanup e2e resources
         if: ${{ always() }}
+        env:
+          AZURE_RESOURCE_GROUP: ${{ env.CLUSTER_NAME }}
         uses: azure/CLI@v2.1.0
         with:
           inlineScript: |
             set +e
-            az group delete --name "${AZURE_CLUSTER_NAME}" --yes --no-wait || true
+            az group delete --name "${AZURE_RESOURCE_GROUP}" --yes --no-wait || true
