feat: Introduce workspace v1beta1 API

--- a/charts/kaito/workspace/templates/webhooks.yaml
+++ b/charts/kaito/workspace/templates/webhooks.yaml
@@ -19,6 +19,7 @@ webhooks:
           - kaito.sh
         apiVersions:
           - v1alpha1
+          - v1beta1
         resources:
           - workspaces
         operations:
