add arc instance type

--- a/examples/inference/arc-examples/kaito_workspace_deepseek_r1_distill_llama_8b.yaml
+++ b/examples/inference/arc-examples/kaito_workspace_deepseek_r1_distill_llama_8b.yaml
@@ -3,6 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-deepseek-r1-distill-llama-8b
 resource:
+  instanceType: Standard_NC16_A2
   preferredNodes:
     - <your-arc-node-name>
   labelSelector:
