add sample in values.yaml

--- a/charts/kaito/workspace/values.yaml
+++ b/charts/kaito/workspace/values.yaml
@@ -30,6 +30,6 @@ resources:
 nodeSelector: {}
 tolerations: []
 affinity: {}
-# Values can be "azure" or "aws"
+# Values can be "azure" or "aws" or "arc"
 cloudProviderName: "azure"
 clusterName: "kaito"
