format arc_sku_handler.go and change arc samples to use <your-vm-sku> in instanceType

--- a/examples/inference/arc-examples/kaito_workspace_phi_3.5-instruct.yaml
+++ b/examples/inference/arc-examples/kaito_workspace_phi_3.5-instruct.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-phi-3-5-mini
 resource:
-  instanceType: Standard_NK6
+  instanceType: <your-vm-sku>
   preferredNodes:
     - <your-arc-node-name>
   labelSelector:
