--- a/examples/inference/arc-examples/kaito_workspace_phi_2.yaml
+++ b/examples/inference/arc-examples/kaito_workspace_phi_2.yaml
@@ -3,7 +3,7 @@ kind: Workspace
 metadata:
   name: workspace-phi-2
 resource:
-  instanceType: Standard_NK6
+  instanceType: <your-vm-sku>
   preferredNodes:
     - <your-arc-node-name>
   labelSelector:
