--- a/docker/presets/models/tfs/Dockerfile
+++ b/docker/presets/models/tfs/Dockerfile
@@ -1,14 +1,10 @@
-FROM python:3.12-slim
+FROM python:3.12-slim AS base
 
-ARG WEIGHTS_PATH
 ARG MODEL_TYPE
 ARG VERSION
 
 # Set the working directory
 WORKDIR /workspace
-
-# Model weights
-COPY ${WEIGHTS_PATH} /workspace/weights
 
 COPY kaito/presets/workspace/dependencies/requirements.txt /workspace/requirements.txt
 
@@ -33,6 +29,14 @@ COPY kaito/presets/workspace/inference/vllm/inference_api.py /workspace/vllm/inf
 # Chat template
 ADD kaito/presets/workspace/inference/chat_templates /workspace/chat_templates
 
-RUN echo $VERSION > /workspace/version.txt && \
-    ln -s /workspace/weights /workspace/tfs/weights && \
+RUN echo $VERSION > /workspace/version.txt
+
+FROM base AS model
+
+ARG WEIGHTS_PATH
+
+# Model weights
+COPY ${WEIGHTS_PATH} /workspace/weights
+
+RUN ln -s /workspace/weights /workspace/tfs/weights && \
     ln -s /workspace/weights /workspace/vllm/weights
