add registry into release pipeline
Signed-off-by: Bangqi Zhu <bangqizhu@microsoft.com>

--- a/.github/workflows/e2e-workflow.yml
+++ b/.github/workflows/e2e-workflow.yml
@@ -63,6 +63,7 @@ jobs:
           isRelease: ${{ inputs.isRelease }}
           region: ${{ inputs.region }}
           k8s_version: ${{ inputs.k8s_version }}
+          registry: ${{ inputs.registry }}
 
       - name: Set Registry
         if: ${{ inputs.isRelease }}
