fix: add download at runtime

--- a/presets/workspace/models/supported_models.yaml
+++ b/presets/workspace/models/supported_models.yaml
@@ -10,6 +10,7 @@ models:
     type: text-generation
     version: https://huggingface.co/meta-llama/Llama-3.1-8B-Instruct/commit/0e9e39f249a16976918f6564b8830bc894c89659
     runtime: tfs
+    downloadAtRuntime: true
     tag: 0.0.1
 
     # Tag history:
