--- a/charts/kaito/workspace/crds/kaito.sh_workspaces.yaml
+++ b/charts/kaito/workspace/crds/kaito.sh_workspaces.yaml
@@ -490,7 +490,7 @@ spec:
                   accessMode:
                     default: public
                     description: |-
-                      AccessMode specifies whether the containerized model image is accessible via public registry
+                      Deprecated: AccessMode specifies whether the containerized model image is accessible via public registry
                       or private registry. This field defaults to "public" if not specified.
                       If this field is "private", user needs to provide the private image information in PresetOptions.
                     enum:
@@ -503,12 +503,12 @@ spec:
                   presetOptions:
                     properties:
                       image:
-                        description: Image is the name of the containerized model
-                          image.
+                        description: 'Deprecated: Image is the name of the containerized
+                          model image.'
                         type: string
                       imagePullSecrets:
-                        description: ImagePullSecrets is a list of secret names in
-                          the same namespace used for pulling the model image.
+                        description: 'Deprecated: ImagePullSecrets is a list of secret
+                          names in the same namespace used for pulling the model image.'
                         items:
                           type: string
                         type: array
@@ -756,7 +756,7 @@ spec:
                   accessMode:
                     default: public
                     description: |-
-                      AccessMode specifies whether the containerized model image is accessible via public registry
+                      Deprecated: AccessMode specifies whether the containerized model image is accessible via public registry
                       or private registry. This field defaults to "public" if not specified.
                       If this field is "private", user needs to provide the private image information in PresetOptions.
                     enum:
@@ -769,12 +769,12 @@ spec:
                   presetOptions:
                     properties:
                       image:
-                        description: Image is the name of the containerized model
-                          image.
+                        description: 'Deprecated: Image is the name of the containerized
+                          model image.'
                         type: string
                       imagePullSecrets:
-                        description: ImagePullSecrets is a list of secret names in
-                          the same namespace used for pulling the model image.
+                        description: 'Deprecated: ImagePullSecrets is a list of secret
+                          names in the same namespace used for pulling the model image.'
                         items:
                           type: string
                         type: array
